KAW-8177 Fix section spacing

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -3,7 +3,7 @@ main .hero-container > div {
 }
 
 main .hero-container {
-  padding: 0;
+  padding: 0 0 var(--section-bottom-padding);
 }
 
 main .hero-container .hero-wrapper {
